fix width overflow

--- a/src/app/_shared-components/PostDetails/PostDetails.module.scss
+++ b/src/app/_shared-components/PostDetails/PostDetails.module.scss
@@ -1,25 +1,60 @@
 .headerWrapper {
-	@apply sticky top-12 z-20 w-full max-w-[100vw] bg-bg_modal px-4 pt-6 shadow-lg lg:px-16;
+	@apply sticky top-12 z-20 w-full bg-bg_modal px-4 pt-6 shadow-lg lg:px-16;
 }
 
 .detailsWrapper {
 	@apply grid w-full gap-y-4 px-4 py-6 lg:gap-4 lg:px-16 2xl:px-0;
+
+	@media (max-width: 1279px) {
+		display: grid !important;
+		grid-template-columns: 1fr !important;
+		gap: 16px;
+	}
+
+	@media (max-width: 768px) {
+		@apply px-2 py-4;
+		overflow-x: hidden;
+	}
 }
 
 .leftWrapper {
 	@apply col-span-2 flex flex-col gap-y-4;
+
+	@media (max-width: 1279px) {
+		display: contents;
+	}
 }
 
 .rightWrapper {
 	@apply col-span-1 flex flex-col gap-y-6;
+
+	@media (max-width: 1279px) {
+		order: 2;
+	}
+
+	@media (max-width: 768px) {
+		@apply gap-y-4;
+	}
 }
 
 .descBox {
 	@apply rounded-xl border border-primary_border bg-bg_modal p-4 lg:p-6;
+
+	@media (max-width: 1279px) {
+		order: 1;
+	}
+
+	@media (max-width: 768px) {
+		@apply p-3;
+	}
 }
 
 .commentsBox {
 	@apply flex flex-col gap-y-4 rounded-xl border border-primary_border bg-bg_modal;
+
+	@media (max-width: 1279px) {
+		order: 3;
+	}
 }
 
 .modalDescBox {
@@ -28,40 +63,12 @@
 
 .analyticsBox {
 	@apply rounded-xl bg-bg_modal p-4 shadow-lg lg:p-6;
+
+	@media (max-width: 768px) {
+		@apply p-3;
+	}
 }
 
 .modalOpen {
 	grid-template-columns: 1fr !important;
-}
-
-.detailsWrapper {
-	@media (max-width: 1279px) {
-		display: grid !important;
-		grid-template-columns: 1fr !important;
-		gap: 16px;
-	}
-}
-
-.leftWrapper {
-	@media (max-width: 1279px) {
-		display: contents;
-	}
-}
-
-.descBox {
-	@media (max-width: 1279px) {
-		order: 1;
-	}
-}
-
-.rightWrapper {
-	@media (max-width: 1279px) {
-		order: 2;
-	}
-}
-
-.commentsBox {
-	@media (max-width: 1279px) {
-		order: 3;
-	}
 }
