--- a/src/app/_shared-components/PostDetails/ProposalPeriods/ProposalPeriods.module.scss
+++ b/src/app/_shared-components/PostDetails/ProposalPeriods/ProposalPeriods.module.scss
@@ -45,7 +45,6 @@
 
 .progressBars {
 	@apply flex w-full items-center justify-between;
-	width: 318px;
 }
 
 .progressBar {
